syntax = "proto3";

package gomicro.srv.user;

service User {
	rpc GetProfileById(UserRequest) returns (UserResponse) {}
}

message user {
	int32 id = 1;
	string name = 2;
	string pwd = 3;
	uint64 createdTime = 4;
	uint64 updatedTime = 5;
}

message Error {
	int32 code = 1;
	string message = 2;
}

message UserRequest {
	int32 id = 1;
	string name = 2;
}

message UserResponse {
	bool success = 1;
	Error error = 2;
	user user = 3;
}
